[package]
name = "project"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0.8.3", features = ["full"] }
anyhow = "1.0.95"
async-trait = "0.1.83"
clap = { version = "4.5.23", features = ["derive"] }
dotenv = "0.15.0"
futures-util = "0.3.31"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["full"] }
